##############################################################################
#
# LPTlib - Lagrangian Particle Tracking library
# 
# Copyright (c) 2012-2013 Advanced Institute for Computational Science, RIKEN.
# All right reserved.
#
##############################################################################

doc_includedir = $(prefix)/doc

doc_include_HEADERS = \
    $(top_builddir)/doc/LPT_design.pdf \
    $(top_builddir)/doc/LPT_ug.pdf

